--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-Template
+This is my TimeSeries project for my kickboxing data.  I have an accompanying blog to go with it but havent published it yet
